# patentbench

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_CHECKLIST.md  LICENSE  MANIFESTO.md  METHODOLOGY.md  README.md  pyproject.toml
.github/workflows/: ci.yml
blog_posts/: 01_why_no_benchmarks.md  02_introducing_patentbench.md  03_transparency_crisis.md
data/: README.md
data/mini/: README.md  sample_103_argument.jsonl  sample_oa_parsing.jsonl
data/real_oa/: benchmark_cases.jsonl  specifications.jsonl  uspto_peds_sample.jsonl
data/rubrics/: README.md  argument_strength.json  legal_accuracy.json
frontend/: patentbench_page.tsx
outreach/: attorney_outreach_emails.md  dm_linkedin_series.md  dm_twitter_announcement.md  email_academic_collaborator.md  email_attorney_evaluator.md  email_contributor_invitation.md  email_ipwatchdog_pitch.md  linkedin_carousel.html  newsletter_announcement.md
patentbench/: __init__.py  anti_hallucination.py  config.py  data_loader.py  evaluator.py  harness.py  metrics.py  uspto_loader.py
patentbench/models/: __init__.py  abigail.py  anthropic_adapter.py  base.py  google_adapter.py  openai_adapter.py
reports/: benchmark_report.html
scripts/: create_benchmark_cases.js  generate_leaderboard.py  pull_pair_specs.js  pull_real_oa_data_expanded.js  pull_real_oa_data_final.js  pull_real_oa_data_v2.js  pull_uspto_data.py  run_benchmark.py  run_multi_model_benchmark.js
tests/: test_data_loader.py  test_evaluator.py
